@@ -1,6 +1,10 @@
 Change Notes
 ============
 
+2009-06-18 kstein
+	- Added ICube.replace(ICube oldCube)
+	- Added DataPool.replaceCube(ICube oldCube, ICube newCube)
+
 2009-04-02	FLI
 	- Added ICube.clear(Key);
 	
